--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
          </nav>
-         <div class="titan">
+         <div class="red">
          <main class="container my-5 titan">
             <div class="bg-light p-5 rounded">
                 <h1>Navbar example</h1>
