--- a/index.html
+++ b/index.html
@@ -59,23 +59,27 @@
         </div>
         <!--Hero Section End-->
         
-        <!--About Section Start-->
-        <div class="container py-5" id="about">
-          <div class="row">
-            <h1 class="text-center pb-1 fw-bold" id="about">About</h1>
-            <div class="col-sm-8">
-              <img src="img/re4 cover art 1.webp" class="img-thumbnail" />
+        <!--2/3 1/3 Section Start-->
+        <div class="bg-grey py-5" id="image">
+          <div class="container py-5">
+            <div class="row">
+              <div class="col-sm-8">
+                <img src="img/re4-cover-art-1.webp" class="img-fluid">
+              </div>
+              <div class="col-sm-4 pt-5">
+                <h2 class="fw-bold bg-dark-grey">About</h2>
+                <p class="bg-dark-grey">
+                  Praesent fringilla lacus eget eros bibendum molestie. Nulla sit amet
+                  mauris sed augue tincidunt suscipit. Donec bibendum egestas egestas.
+                  Maecenas eu urna nisi. In at lectus sollicitudin, ornare quam tempor,
+                  dignissim justo. Sed aliquam luctus leo ultricies finibus. Morbi
+                  lacinia justo vel eleifend feugiat.
+                </p>
+              </div>
             </div>
-            <p>
-              Praesent fringilla lacus eget eros bibendum molestie. Nulla sit amet
-              mauris sed augue tincidunt suscipit. Donec bibendum egestas egestas.
-              Maecenas eu urna nisi. In at lectus sollicitudin, ornare quam tempor,
-              dignissim justo. Sed aliquam luctus leo ultricies finibus. Morbi
-              lacinia justo vel eleifend feugiat.
-            </p>
           </div>
         </div>
-        <!--About Section End-->
+        <!--2/3 1/3 Section End-->
 
         <!--2/3 1/3 Section Start-->
 
