--- a/index.html
+++ b/index.html
@@ -79,11 +79,21 @@
               <div class="col-sm-4 pt-5">
                 <h2 class="fw-bold bg-dark-grey">About Resident Evil 4</h2>
                 <p class="bg-dark-grey">
-                  Praesent fringilla lacus eget eros bibendum molestie. Nulla sit amet
-                  mauris sed augue tincidunt suscipit. Donec bibendum egestas egestas.
-                  Maecenas eu urna nisi. In at lectus sollicitudin, ornare quam tempor,
-                  dignissim justo. Sed aliquam luctus leo ultricies finibus. Morbi
-                  lacinia justo vel eleifend feugiat.
+                  Resident Evil 4 stars Leon Kennedy, a returning main character from Resident Evil 2. 
+                  But instead of being a rookie cop being fighting off zombies in Raccoon City, 
+                  he now works as a secret agent for the U.S. government, 
+                  who has now been assigned to rescue the President's daughter. 
+                  The President's daughter was caputured by a religious cult called the Los Illuminados who's leader, 
+                  Osmund Saddler, has plans to take over the U.S. with a parasite called Las Plagas. 
+                  The game thrives off being very cheesy and its mountain of action but since it is a horror game,
+                  it's not afarid to lean into more horror like elements like jumpscares, weird sounds and horrific emeny's.
+                </p>
+                
+                <p class="bg-dark-grey">
+                  However with all that being said, 
+                  RE4 took a while to before it could be released. 
+                  This game has gone through many different versions over its long development process,
+                  one version going to spawn its own franchise within Capcom's libary, 
                 </p>
               </div>
             </div>
