--- a/index.html
+++ b/index.html
@@ -79,21 +79,18 @@
               <div class="col-sm-4 pt-5">
                 <h2 class="fw-bold bg-dark-grey">About Resident Evil 4</h2>
                 <p class="bg-dark-grey">
-                  Resident Evil 4 stars Leon Kennedy, a returning main character from Resident Evil 2. 
-                  But instead of being a rookie cop being fighting off zombies in Raccoon City, 
-                  he now works as a secret agent for the U.S. government, 
-                  who has now been assigned to rescue the President's daughter. 
-                  The President's daughter was caputured by a religious cult called the Los Illuminados who's leader, 
-                  Osmund Saddler, has plans to take over the U.S. with a parasite called Las Plagas. 
-                  The game thrives off being very cheesy and its mountain of action but since it is a horror game,
-                  it's not afarid to lean into more horror like elements like jumpscares, weird sounds and horrific emeny's.
+                  Resident Evil 4 or Re4 stars Leon Kennedy from Resident Evil 2, who is now an agent for the U.S. government, rescuing the President's daughter, Ashley Graham. 
+                  Resident Evil has always been one of Capcom's most popular and best selling franchises within the company.
+                  And Re4, is no exception. 
+                  To, some Re4 is the best game within its franchise, to others it's one of the best horror games.
+                  And to go even further, it's crowned as one of the best video games of all time. 
                 </p>
                 
                 <p class="bg-dark-grey">
-                  However with all that being said, 
-                  RE4 took a while to before it could be released. 
-                  This game has gone through many different versions over its long development process,
-                  one version going to spawn its own franchise within Capcom's libary, 
+                  However the Resident Evil 4 that is praised by many wasn't always going to be this. 
+                  As far as we know with Re4, ironically, the game has had 4 different builds over the 6 year period of its development. 
+                  One going to spawn its own franchise within the Capcom's library of games, and another going to fascinate fans by its dark and gritty atmosphere. 
+                  Now let us go ahead and dive into these builds of the game 
                 </p>
               </div>
             </div>
@@ -111,11 +108,16 @@
               <div class="col-sm-4 pt-5">
                 <h2 class="fw-bold bg-red">Devil May Cry Version</h2>
                 <p class="bg-red">
-                  Praesent fringilla lacus eget eros bibendum molestie. Nulla sit amet
-                  mauris sed augue tincidunt suscipit. Donec bibendum egestas egestas.
-                  Maecenas eu urna nisi. In at lectus sollicitudin, ornare quam tempor,
-                  dignissim justo. Sed aliquam luctus leo ultricies finibus. Morbi
-                  lacinia justo vel eleifend feugiat.
+                  This build of the game was what come from the mind of Hideki Kamiya, the director of the game. 
+                  Kamiya wanted Re4 to have action unlike the past 3 games. 
+                  This build was going to star Tony Redgrave, a seemingly invincible man with superhuman abilities. 
+                  However, the issue with this build of the game is that it was too cool and too stylish for Resident Evil. 
+                  But Shinji Mikami, the overseer of the game, didn't think this build was bad.
+                  And instead of scrapping the build, it was remade into its own game called Devil May Cry.
+                </p>
+                <p class="bg-red">
+                  Devil May Cry or DMC now starred Dante, the son of the demon king Sparda, who is looking for info on the man who killed his mother. 
+                  And instead of fighting zombies, he now fends off hordes of demons, and battles with various weapons in different styles. 
                 </p>
               </div>
             </div>
@@ -138,22 +140,16 @@
                 allowfullscreen>
                 </iframe>
                 <p>
-                  Praesent fringilla lacus eget eros bibendum molestie. Nulla sit amet
-                  mauris sed augue tincidunt suscipit. Donec bibendum egestas egestas.
-                  Maecenas eu urna nisi. In at lectus sollicitudin, ornare quam tempor,
-                  dignissim justo. Sed aliquam luctus leo ultricies finibus. Morbi
-                  lacinia justo vel eleifend feugiat.
+                  The video above shows the other two builds of Re4. 
+                  The first being what some called the "fog" build of the game. 
+                  This version was handled by a different director, Hrioshi Shibata.
+                  In this build, Leon Kennedy is seen inflitrating Umbrella's secert headquartes using some mysterious power in his hand. 
+                  Shibata's build, while visually impressive for the time, lacked what Capcom wanted the game to be. 
                 </p>
     
                 <p>
-                  n egestas pharetra convallis. Integer nec ullamcorper mi. Nunc
-                  ullamcorper fermentum leo, accumsan ullamcorper felis faucibus
-                  fermentum. Duis blandit in nibh sed tincidunt. Sed augue risus,
-                  sollicitudin sollicitudin eleifend posuere, congue mattis eros. Proin
-                  mollis est dolor, sed pulvinar enim facilisis eget. Sed ut vulputate
-                  ex. Ut ultrices eleifend orci, quis venenatis justo tempor nec.
-                  Suspendisse consectetur fringilla ex, eu porta tellus mollis sed. Sed
-                  a congue urna. Mauris eget lacus quam.
+                  The next part in the video shows what people refer to as the "hallucination" build.
+                  This time putting Leon in an abandoned house fighting off what seems to be haunted dolls and spirts.
                 </p>
             </div>
           </div>
@@ -167,15 +163,7 @@
               <div class="col-md py-5">
                 <h2 class="fw-bold">Sources</h2>
                 <p>
-                  Ut ultrices eleifend orci, quis venenatis justo tempor nec.
-                  Suspendisse consectetur fringilla ex, eu porta tellus mollis sed.
-                  Sed a congue urna. Mauris eget lacus quam.
-                </p>
-
-                <p>
-                  Sed augue risus, sollicitudin sollicitudin eleifend posuere,
-                  congue mattis eros. Proin mollis est dolor, sed pulvinar enim
-                  facilisis eget.
+                  This google slide is here for all of my sources that I have used to gather up information for this project. 
                 </p>
               </div>
               <div class="col-md-8 py-5">
